--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+.idea/
+.swp
+.gitignore
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
