--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cffi==1.5.0
 Flask==0.10.1
 Flask-Bcrypt==0.7.1
 Flask-DebugToolbar==0.10.0
+Flask-HTTPAuth==2.7.2
 Flask-Migrate==1.7.0
 Flask-Moment==0.5.1
 Flask-RESTful==0.3.5
